feat: create and style title component

--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -1,1 +1,5 @@
-<p>title works!</p>
+<div class="title-container">
+  <span class="title-container__divider"></span>
+  <h1 class="title-container__title">THE BLOG</h1>
+  <span class="title-container__divider"></span>
+</div>
