feat: styled big card

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,19 @@
-<p>big-card works!</p>
+<a href="https://google.com" class="big-card__container">
+  <div>
+    <img
+      src="https://placehold.jp/800x800.png"
+      alt="Placeholder image"
+      class="big-card__image"
+    />
+    <p class="big-card__date">January 18, 2020</p>
+  </div>
+  <h3 class="big-card__title">
+    ATENÇÃO!! A vida muda hoje: Saiu o filme da pantera
+  </h3>
+
+  <div class="big-card__description">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore voluptatem
+    non eaque odit voluptatum amet earum ad quo repudiandae, distinctio, labore
+    blanditiis deserunt quis iusto fuga minima optio sequi omnis.
+  </div>
+</a>
