feat: add small card to home page

--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -1,5 +1,5 @@
 <div class="title-container">
   <span class="title-container__divider"></span>
-  <h1 class="title-container__title">THE BLOG</h1>
+  <h1 class="title-container__title">Marllon Blog</h1>
   <span class="title-container__divider"></span>
 </div>
