--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,13 @@
-<p>small-card works!</p>
+<a href="https://google.com" class="small-card">
+  <div class="small-card__photo">
+    <img
+      src="https://placehold.jp/800x800.png"
+      alt="Placeholder image"
+      class="small-card__image"
+    />
+  </div>
+  <div class="small-card__description">
+    <div class="small-card__date">January 01, 2020</div>
+    <div class="small-card__title">Noticia Quente! O mundo esfriou</div>
+  </div>
+</a>
