--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
 * {
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
   background-color: #111111;
-  color: #FAFAFA;
+  color: #fafafa;
+}
+
+.last .small-card::after {
+  display: none !important;
+}
+
+a {
+  text-decoration: none;
 }
