feat: change fotos and styling menu bar

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,10 +1,6 @@
 <a href="https://google.com" class="big-card__container">
   <div>
-    <img
-      src="https://placehold.jp/800x800.png"
-      alt="Placeholder image"
-      class="big-card__image"
-    />
+    <img [src]="octocat" alt="Placeholder image" class="big-card__image" />
     <p class="big-card__date">January 18, 2020</p>
   </div>
   <h3 class="big-card__title">
