--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,17 @@
-<p>menu-bar works!</p>
+<nav class="menu-bar">
+  <ul>
+    <li>
+      <a href="https://linkedin.com/in/marllon-campos" target="_blank">
+        <img [src]="linkedinLogo" height="24px" />
+        <span>Github</span></a
+      >
+    </li>
+    <li><span>•</span></li>
+    <li>
+      <a href="https://github.com/marlloncampos" target="_blank">
+        <img [src]="githubLogo" height="24px" />
+        <span>Github</span></a
+      >
+    </li>
+  </ul>
+</nav>
