--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,7 +1,7 @@
 <a href="https://google.com" class="small-card">
   <div class="small-card__photo">
     <img
-      src="https://placehold.jp/800x800.png"
+      src="https://images.pexels.com/photos/2229887/pexels-photo-2229887.jpeg?auto=compress&cs=tinysrgb&w=1200"
       alt="Placeholder image"
       class="small-card__image"
     />
