--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,15 @@
-<app-title />
-<section class="articles">
-  <article class="articles__main">
-    <app-big-card />
-  </article>
-  <div class="articles__related">
-    <app-small-card
-      *ngFor="let post of relatedPosts; let last = last"
-      [ngClass]="last ? 'last' : ''"
-    />
-  </div>
-</section>
+<main class="home-container">
+  <app-menu-bar />
+  <app-title />
+  <section class="articles">
+    <article class="articles__main">
+      <app-big-card />
+    </article>
+    <div class="articles__related">
+      <app-small-card
+        *ngFor="let post of relatedPosts; let last = last"
+        [ngClass]="last ? 'last' : ''"
+      />
+    </div>
+  </section>
+</main>
