--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,10 @@
 .articles {
   margin-top: 44px;
-  gap: 48px;
   display: flex;
+  gap: 124px;
   justify-content: center;
+}
+
+.home-container {
+  padding-bottom: 5dvh;
 }
