--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,8 +1,19 @@
 .articles {
   margin-top: 44px;
   display: flex;
-  gap: 124px;
+  gap: 64px;
+  padding: 0 24px;
   justify-content: center;
+  flex-wrap: wrap;
+
+  &__related {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 36px;
+    flex: 1 1 300px;
+    max-width: 400px;
+  }
 }
 
 .home-container {
