--- a/src/app/components/small-card/small-card.component.scss
+++ b/src/app/components/small-card/small-card.component.scss
@@ -2,7 +2,6 @@
   display: flex;
   gap: 24px;
   position: relative;
-  margin-bottom: 36px;
 
   &:hover &__title {
     text-decoration: underline;
@@ -42,4 +41,8 @@
     width: 100%;
     height: auto;
   }
+}
+
+:host {
+  width: 100%;
 }
