fix: typo error on menu

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -3,7 +3,7 @@
     <li>
       <a href="https://linkedin.com/in/marllon-campos" target="_blank">
         <img [src]="linkedinLogo" height="24px" />
-        <span>Github</span></a
+        <span>Linkedin</span></a
       >
     </li>
     <li><span>•</span></li>
