--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,15 +1,13 @@
 <a href="https://google.com" class="big-card__container">
   <div>
-    <img [src]="octocat" alt="Placeholder image" class="big-card__image" />
-    <p class="big-card__date">January 18, 2020</p>
+    <img [src]="photoCover" alt="Placeholder image" class="big-card__image" />
+    <p class="big-card__date">{{ cardDate }}</p>
   </div>
   <h3 class="big-card__title">
-    ATENÇÃO!! A vida muda hoje: Saiu o filme da pantera
+    {{ cardTitle }}
   </h3>
 
   <div class="big-card__description">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore voluptatem
-    non eaque odit voluptatum amet earum ad quo repudiandae, distinctio, labore
-    blanditiis deserunt quis iusto fuga minima optio sequi omnis.
+    {{ cardDescription }}
   </div>
 </a>
