--- a/src/app/components/small-card/small-card.component.scss
+++ b/src/app/components/small-card/small-card.component.scss
@@ -40,6 +40,9 @@
   &__image {
     width: 100%;
     height: auto;
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    object-position: top left;
   }
 }
 
