--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,4 +1,4 @@
-<a href="https://google.com" class="small-card">
+<a [routerLink]="['content', id]" class="small-card">
   <div class="small-card__photo">
     <img [src]="photoCover" alt="Placeholder image" class="small-card__image" />
   </div>
