--- a/src/app/components/menu-bar/menu-bar.component.scss
+++ b/src/app/components/menu-bar/menu-bar.component.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 1px 3px 2px #222;
   ul {
     display: flex;
     align-items: center;
